--- a/public/scss/layout/_main.scss
+++ b/public/scss/layout/_main.scss
@@ -4,7 +4,7 @@
     grid-template-areas: "main__container-content main__container-sidebar";
 
     @include respond("lg") {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
         grid-template-areas:
                             "main__container-content"
                             "main__container-sidebar";
